--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
 
     <application android:name="io.flutter.app.FlutterApplication"
-        android:label="Covid Brief"
+        android:label="Covid Satellite"
         android:icon="@mipmap/ic_launcher">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
